Fixed bug #60174 (Notice when array in method prototype error) this should also exists in ext/reflection. since the new warning of "array to string convert" is introduced in zend_make_printable_zval which is used in ext/reflection too

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@318599 c90b9560-bf6c-de11-be94-00142212c4b1